fixed images not showing

--- a/css/style.css
+++ b/css/style.css
@@ -47,8 +47,7 @@ body {
   width: 60%;
   margin: 0 auto; }
 
-.btn:link,
-.btn:visited {
+.btn:link, .btn:visited {
   display: inline-block;
   text-transform: uppercase;
   text-decoration: none;
@@ -101,42 +100,37 @@ body {
 
 .header {
   height: 85vh;
-  background-image: url(/src/img/laptop_blur.jpg);
+  background-image: url(../src/img/laptop_blur.jpg);
   background-size: cover;
   background-position: top;
   position: relative; }
-
-.logo-box {
-  position: absolute;
-  top: 5rem;
-  left: 5rem; }
-
-.logo {
-  height: 5rem; }
-
-.text-box {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center; }
+  .header__logo-box {
+    position: absolute;
+    top: 5rem;
+    left: 5rem; }
+  .header__logo {
+    height: 5rem; }
+  .header__text-box {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center; }
 
 .heading-primary {
   color: #fff;
   text-transform: uppercase;
   backface-visibility: hidden;
   margin-bottom: 7rem; }
-
-.heading-primary-main {
-  display: block;
-  font-size: 5rem;
-  font-weight: 400;
-  letter-spacing: 2rem;
-  animation: moveInLeft 1s ease-out; }
-
-.heading-primary-sub {
-  display: block;
-  font-size: 2rem;
-  font-weight: 400;
-  letter-spacing: 1.2rem;
-  animation: moveInRight 1s ease-out; }
+  .heading-primary--main {
+    display: block;
+    font-size: 5rem;
+    font-weight: 400;
+    letter-spacing: 2rem;
+    animation: moveInLeft 1s ease-out; }
+  .heading-primary--sub {
+    display: block;
+    font-size: 2rem;
+    font-weight: 400;
+    letter-spacing: 1.2rem;
+    animation: moveInRight 1s ease-out; }
