--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,30 +1,32 @@
-.btn:link,
-.btn:visited {
-    display: inline-block;
-    text-transform: uppercase;
-    text-decoration: none;
-    padding: 2rem 4rem;
-    font-size: 1.5rem;
-    border-radius: .5rem;
-    transition: all .2s;
-}
-
-.btn:hover {
-    transform: translateY(3px);
-    box-shadow: 0 1rem 2rem rgba($color-dark, .3);
-}
-
-.btn:active {
-    transform: translateY(1px);
-    box-shadow: 0 .5rem 1rem rgba($color-dark, .3);
-}
-
-.btn-orange {
-    background-color: $orange-dark;
-    color: $color-light;
-}
-
-.btn-animated {
-    animation: moveInBottom .5s ease-out .75s;
-    animation-fill-mode: backwards;
+.btn {
+    &:link,
+    &:visited {
+        display: inline-block;
+        text-transform: uppercase;
+        text-decoration: none;
+        padding: 2rem 4rem;
+        font-size: 1.5rem;
+        border-radius: .5rem;
+        transition: all .2s;
+    }
+    
+    &:hover {
+        transform: translateY(3px);
+        box-shadow: 0 1rem 2rem rgba($color-dark, .3);
+    }
+    
+    &:active {
+        transform: translateY(1px);
+        box-shadow: 0 .5rem 1rem rgba($color-dark, .3);
+    }
+    
+    &-orange {
+        background-color: $orange-dark;
+        color: $color-light;
+    }
+    
+    &-animated {
+        animation: moveInBottom .5s ease-out .75s;
+        animation-fill-mode: backwards;
+    }
 }
